# ROS2swarm

./: .gitignore  Bridge.sh  CONTRIBUTORS.md  INSTALL_GUIDE.md  README.md  add_robots_to_simulation.sh  deliver_to_bot.sh  deliver_to_bot_all.sh  jackal.sh  log_items.csv  log_items_AS_1.csv  log_items_removed.csv  rebuild.sh  restart.sh  restart_turtle.sh  restart_turtle_all.sh  run_test_batch.sh  start_command.sh  start_jackal.sh  start_robot.sh  start_simulation.sh  start_turtle.sh  wifi_switch_to_adhoc.sh
Results_TRAIL_WORKSHOP_2022/results_AS/: log_items_removed_AS_1_newtime.csv  (+1 more)
models/thymio_description/: CMakeLists.txt  README.md  model.config  package.xml
models/thymio_description/launch/: model.launch.py  rviz.launch.py  spawn.launch  template.rviz
models/thymio_description/meshes/: base_collision.dae  base_collision_ascii.stl  base_collision_reduced_ascii.stl  base_simple.dae  left_wheel.STL  main_body.STL  quader.stl  right_wheel.STL  wheel.dae
models/thymio_description/urdf/: base.urdf.xacro  e_puck.sdf  e_puck.urdf  imu.urdf.xacro  proximity_sensor.urdf.xacro  thymio.sdf  thymio.urdf  thymio.urdf.xacro  wheel.urdf.xacro
models/thymio_description/urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
models/thymio_description/urdf/log/: latest_build
results_AH/: log_item_AH_1  log_items_AH_1.csv  log_items_AH_2.csv  log_items_removed_AH_1  log_items_removed_AH_1.csv  log_items_removed_AH_2.csv
results_AS/: log_items_AS_1_newtime.csv  log_items_AS_1_spike.csv  log_items_AS_2.csv  log_items_AS_2_newtime.csv  log_items_removed_AS_1.csv  log_items_removed_AS_2.csv  log_items_removed_AS_2_newtime.csv
results_RZ/: log_items_breakdown_rz.csv  log_items_newtime_rz_1.csv  log_items_removed_breakdown_rz.csv  log_items_removed_newtime_rz_1.csv  log_items_removed_newtime_rz_2.csv  log_items_removed_rz_1.csv  log_items_removed_rz_2.csv  log_items_removed_rz_3.csv  log_items_rz_1.csv  log_items_rz_2.csv  log_items_rz_3.csv
scripts/: add_robots_to_simulation.sh  deliver_to_bot.sh  deliver_to_bot_all.sh  jackal.sh  lidar_data.py  restart_turtle_all.sh  restart_turtle_all_adhoc.sh
scripts lidar experiments/: arena_3_drive_CY.sh  arena_3_random_walk_CY.sh  arena_6_random_walk_CY.sh  arena_7_drive_CY.sh  arena_large_4_drive_CY.sh  arena_large_6_drive_CY.sh  arena_large_7_drive_CY.sh  two_rooms_5_drive_CY.sh  two_rooms_6_drive_CY.sh  two_rooms_7_drive_CY.sh  two_rooms_8_drive_CY.sh
src/communication_interfaces/: CMakeLists.txt  package.xml
src/communication_interfaces/msg/: FloatArray.msg  IntListMessage.msg  ModelStatesStamped.msg  OpinionMACMessage.msg  OpinionMessage.msg  RangeData.msg  Ray.msg  RayArray.msg  RobotArray.msg
src/communication_interfaces/srv/: ItemService.srv
visualization/: plot_experiment.py  utils.py
(+241 files in other folders)
